--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,9 @@
   "version": "0.0.0",
   "dependencies": {
     "pure": "~0.2.0",
-    "jquery": "~1.9.1"
+    "zepto": "~1.1.2",
+    "backbone": "~1.1.0",
+    "underscore": "~1.5.2"
   },
   "devDependencies": {}
 }
