--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "time-grunt": "~0.1.1",
     "grunt-webp": "~0.0.1",
     "grunt-autoshot": "~0.0.2",
-    "grunt-responsive-images": "~0.0.3"
+    "grunt-responsive-images": "~0.0.3",
+    "grunt-bower-install": "~0.8.0"
   },
   "engines": {
     "node": ">=0.8.0"
