--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "treasure-js",
   "version": "0.0.0",
-  "dependencies": {},
+  "dependencies": {
+  },
   "devDependencies": {
     "grunt": "~0.4.1",
     "grunt-contrib-copy": "~0.4.1",
@@ -28,7 +29,8 @@
     "grunt-webp": "~0.0.1",
     "grunt-autoshot": "~0.0.2",
     "grunt-responsive-images": "~0.0.3",
-    "grunt-bower-install": "~0.8.0"
+    "grunt-bower-install": "~0.8.0",
+    "grunt-exec": "~0.4.3"
   },
   "engines": {
     "node": ">=0.8.0"
